@@ -7,6 +7,13 @@ define('PMA_MINIMUM_COMMON', true);
 require_once './libraries/common.lib.php';
 require_once './libraries/sqlparser.lib.php';
 
+// MSIE 6 (at least some unpatched versions) has problems loading CSS 
+// when zlib_compression is on
+if (PMA_USR_BROWSER_AGENT == 'IE' && PMA_USR_BROWSER_VER == '6'
+ && (ini_get('zlib.output_compression')) ) {
+    ini_set('zlib.output_compression', 'Off');
+}
+
 if ($GLOBALS['text_dir'] === 'ltr') {
     $right = 'right';
     $left = 'left';
